<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/fragment_inicio_linearlayout">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/fragment_inicio_Faltan"
        android:padding="6dp"
        android:layout_margin="10dp"
        android:id="@+id/fragment_inicio_textview_faltan"
        />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center">
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_weight="1"
            android:gravity="center">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:layout_margin="10dp"
                android:padding="6dp"
                android:background="#000000"
                android:textColor="#ffc107"
                android:textSize="40sp"
                android:id="@+id/fragment_inicio_textview_dias"
                />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:layout_margin="10dp"
                android:padding="6dp"
                android:text="@string/fragment_inicio_textodias"
                android:textSize="12sp"
                android:id="@+id/fragment_inicio_textview_textodias"
                />
        </LinearLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical"
            android:layout_weight="1">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:layout_margin="10dp"
                android:padding="6dp"
                android:background="#000000"
                android:textColor="#ffc107"
                android:textSize="40sp"
                android:id="@+id/fragment_inicio_textview_horas"
                />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:layout_margin="10dp"
                android:padding="6dp"
                android:text="@string/fragment_inicio_textohoras"
                android:textSize="12sp"
                android:id="@+id/fragment_inicio_textview_textohoras"
                />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical"
            android:layout_weight="1">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:layout_margin="10dp"
                android:padding="6dp"
                android:background="#000000"
                android:textColor="#ffc107"
                android:textSize="40sp"
                android:id="@+id/fragment_inicio_textview_minutos"
                />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:layout_margin="10dp"
                android:padding="6dp"
                android:text="@string/fragment_inicio_textominutos"
                android:textSize="12sp"
                android:id="@+id/fragment_inicio_textview_textominutos"
                />
        </LinearLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical"
            android:layout_weight="1">
        <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:layout_margin="10dp"
                android:padding="6dp"
                android:background="#000000"
                android:textColor="#ffc107"
                android:textSize="40sp"
                android:id="@+id/fragment_inicio_textview_segundos"
                />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:layout_margin="10dp"
                android:padding="6dp"
                android:text="@string/fragment_inicio_textosegundos"
                android:textSize="12sp"
                android:id="@+id/fragment_inicio_textview_textosegundos"
                />
    </LinearLayout>
</LinearLayout>
</LinearLayout>